Upgrade E2 manager spec to version 2019-08-08
This changes the drop-all-connections endpoint to use
method PUT (formerly used method DELETE).
Adds back-end controller method to handle RESET, but
the front end does not yet expose a control for this.

Change-Id: Iade4ce48291844893bfb832c144cf75a2e0d3595
Signed-off-by: Lott, Christopher (cl778h) <cl778h@att.com>